# TODO-service

./: CLAUDE.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 96eadc6db0f3_fixed_the_connections.py  caf4a23c04e0_create_tables.py  df45911adcef_добавил_поля.py
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  dependencies.py  router.py
app/api/v1/auth/: __init__.py  post_login.py  post_logout.py  post_refresh.py  post_register.py  router_auth.py
app/api/v1/categories/: __init__.py  delete_category.py  get_categories.py  get_category.py  patch_category.py  post_category.py  router_categories.py
app/api/v1/comments/: __init__.py  delete_comment.py  get_comment.py  get_comments.py  post_comment.py  put_comment.py  router_comments.py
app/api/v1/tags/: __init__.py  delete_tag.py  get_tag.py  get_tags.py  patch_tag.py  post_tag.py  router_tags.py
app/api/v1/todos/: __init__.py  delete_todo.py  get_todo.py  get_todos.py  patch_todo.py  post_todo.py  router_todos.py
app/api/v1/users/: __init__.py  delete_user.py  get_user.py  get_users.py  post_user.py  router_users.py
app/core/: __init__.py  config.py  error_messages.py  exceptions.py  logging.py  security.py
app/db/: __init__.py  database.py
app/models/: __init__.py  categories.py  coments.py  comments.py  refresh_tokens.py  tags.py  todo_tags.py  todos.py  users.py
app/repositories/: __init__.py  categories_repositories.py  comments_repositories.py  refresh_token_repository.py  tags_repositories.py  todo_repositories.py  users_repositories.py
app/schemas/: __init__.py
app/schemas/auth/: __init__.py  login_request.py
app/schemas/categories/: __init__.py  category_base.py  category_create.py  category_patch.py  category_response.py
app/schemas/comments/: __init__.py  comment_create.py  comment_response.py
app/schemas/tags/: __init__.py  tag_base.py  tag_create.py  tag_patch.py  tag_response.py
app/schemas/todos/: __init__.py  todo_base.py  todo_create.py  todo_patch.py  todo_response.py
app/schemas/users/: __init__.py  user_base.py  user_create.py  user_response.py
app/services/: __init__.py  auth_service.py  categories_services.py  comments_services.py  tags_services.py  todo_services.py  todos_services.py  users_services.py
app/tests/: test_todos.py
