[project]
name = "todo-service"
version = "0.1.0"
description = ""
authors = [
    {name = "ad",email = "antosha_klepikov@bk.ru"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[all] (>=0.135.0,<0.136.0)",
    "sqlalchemy (>=2.0.47,<3.0.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
]

[tool.poetry.group.dev.dependencies]
ruff = ">=0.15.7,<0.16.0"

####################################################################
#--------------------------------------------------------
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"
[tool.ruff]

target-version = "py312" # говорит на какой версии питона мы работаем и чтобы он не ругался
src = ["src", "app"] # говорит что эти папки корни проекта
extend-exclude = [".venv", "venv", "build", "dist", "__pycache__", "alembic/versions"] # говорит ruff куда не нужно лезть
[tool.ruff.lint]
## Набор правил: базовые ошибки/предупреждения + сортировка импортов- + апгрейды и упрощения
select = [
    "E", # ошибки стиля
    "C90", # слишком много if/for → скажет "разбей функцию"
    "F", # неиспользуемые переменные (F401), несуществующие имена (F821) ← у тебя их много, забытые импорты
    "W", # мелкие предупреждения по стилю, некритично, но полезно
    "I", # отвечает за сортировку импортов
    "UP", # автоматически улучшает код под новую версию Python
    "B", # ищет скрытые и потенциальные баги (опасные default-аргументы, странные конструкции, логические ошибки)
    "SIM", # предлагает упростить код
    "N", # проверяет нейминг
    "A", # ловит переопределение встроенных имён
    "ARG", # говорит, если аргумент функции не используется
#    "ERA", # находит закомментированный код
    "RET", # улучшает работу с return
    "C4", # упрощение коллекций
    "RUF", # уникальные проверки
    "ASYNC", # ловит проблемы в async-функциях
]
ignore = ["ARG001", "B008", "E501", "F821", "I001", "RUF022", "E402"]
[tool.ruff.lint.isort]
known-first-party = ["app", "src"] # считай app и src моим кодом (не сторонними библиотеками)
combine-as-imports = true # объединяет импорты с as
force-sort-within-sections = true #заставляет сортировать импорты внутри каждой группы

[tool.ruff.format]
quote-style = "double" # "double" | "single" заставляет использовать
indent-style = "space" # отступы = пробелы (а не табы)
line-ending = "lf" # тип перевода строки
docstring-code-format = true # форматирует код внутри docstring
#-----------------------------------------------------------
######################################################################
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false